# golding_mso

./: ._pyproject.toml  .gitignore  .readthedocs.yaml  __about__.py  pyproject.toml  readme.md  requirements.txt
docs/source/: calc_math.rst  cell.rst  conf.py  golding_mso.rst  index.rst  privindex.rst  readme.md  syns.rst  utils.rst
golding_mso/: __init__.py  cell.py  cell_calc.py  config.py  data.py  golding_mso_config_default.json  golding_mso_default_config.json  math_calc.py  nrn_types.py  sims.py  syns.py  utils.py
golding_mso/mechanisms/: baumann_dorsal_hcn.mod  khurana_hcn.mod  leak.mod  leak_hcn.mod  leak_kht.mod  leak_klt.mod  mathews_klt.mod  nabel_kht.mod  scott_na.mod
src/golding_mso/: cell.py  cell_calc.py  data.py  math_calc.py  sims.py  syns.py
src/golding_mso/mechanisms/: baumann_ventral_hcn.mod  spencer_na.mod
