[project]
name = "golding_mso"
authors = [
  {name="Jared Casarez", email="jaredcasarez1@gmail.com"},
]
description = "GoldingMSO NEURON project library"
readme = "readme.md"
requires-python = ">= 3.8"
dependencies = [
  "dill>=0.3", # Used for saving and loading functions
  "numpy>=1.21", # Used for numerical operations (e.g., arrays, mathematical calculations)
  "scipy>=1.7", # Used for curve fitting and other scientific computations
  "pandas>=1.3", # Used for data manipulation and analysis
  "neuron>=8.0", # Core dependency for NEURON simulation software
]
dynamic = ["version"]
[tool.hatch.version]
scheme = "standard"
path = "__about__.py"

[project.urls]
Project = "https://www.github.com/golding-lab/golding_mso"
Lab = "https://goldinglab.org"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true

[tool.marimo.runtime]
pythonpath = ["src"]

